# HaVoc

./: .gitignore  Cargo.toml  hvoc.html
hvoc-api/: Cargo.toml
hvoc-api/src/: lib.rs
hvoc-api/src/handlers/: attachments.rs  board.rs  forum.rs  identity.rs  messages.rs  mod.rs  profile.rs  sync.rs  ws.rs
hvoc-cli/: Cargo.toml
hvoc-cli/src/: main.rs
hvoc-core/: Cargo.toml
hvoc-core/src/: canon.rs  error.rs  lib.rs  object.rs
hvoc-store/: Cargo.toml
hvoc-store/src/: keystore.rs  lib.rs  migrations.rs  repos.rs
hvoc-store/tests/: repos.rs
hvoc-veilid/: Cargo.toml
hvoc-veilid/src/: crypto.rs  dht.rs  lib.rs  node.rs  sync.rs
scripts/: build-release.sh
tests/: e2e.sh
