[package]
name = "hvoc-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
hvoc-core   = { path = "../hvoc-core" }
hvoc-veilid = { path = "../hvoc-veilid" }
hvoc-store  = { path = "../hvoc-store" }
hvoc-api    = { path = "../hvoc-api" }
tokio       = { workspace = true }
clap        = { version = "4", features = ["derive"] }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow      = { workspace = true }
serde_json  = { workspace = true }
dirs-next   = "2"
veilid-core = { workspace = true }
