[package]
name = "hvoc-store"
version = "0.1.0"
edition = "2021"

[dependencies]
hvoc-core  = { path = "../hvoc-core" }
rusqlite   = { workspace = true }
tokio      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
chrono     = { workspace = true }
hex        = { workspace = true }
tracing    = { workspace = true }
blake3     = { workspace = true }
base64     = { workspace = true }
