[package]
name = "hvoc-veilid"
version = "0.1.0"
edition = "2021"

[dependencies]
hvoc-core   = { path = "../hvoc-core" }
veilid-core = { workspace = true }
tokio       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
tracing     = { workspace = true }
thiserror   = { workspace = true }
hex         = { workspace = true }
base64      = { workspace = true }
chrono      = { workspace = true }
